Add "approve status"

--- a/views/rooms/your_requests.erb
+++ b/views/rooms/your_requests.erb
@@ -9,3 +9,5 @@ You have requested <%= @room_details['title'] %>
 <%= @room_details['location'] %>
 <br>
 on <%= @occupied_date %>
+<br>
+Approve status: <%= @approve_status %>
