--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,5 +1,4 @@
-<form action='/signin-submit' method='POST'>
+<form action='/new_user_submit' method='POST'>
   <input type='text' name='username' required />
   <input type='submit' value='Sign in' />
 </form>
-<%=@Reply%>
