--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,4 +1,5 @@
 <form action='/new_user_submit' method='POST'>
   <input type='text' name='username' required />
+  <input type='text' name='password' required />
   <input type='submit' value='Sign in' />
 </form>
