--- a/views/signin.erb
+++ b/views/signin.erb
@@ -1,5 +1,6 @@
 <form action='/signin-submit' method='POST'>
   <input type='text' name='username' required />
+  <input type='text' name='password' required />
   <input type='submit' value='Sign in' />
 </form>
 <%=@Reply%>
