refactor connections with database helper

--- a/views/rooms/new.erb
+++ b/views/rooms/new.erb
@@ -3,5 +3,8 @@
   <input type='text' name='description' placeholder='description' required />
   <input type='number' name='price' placeholder='price' required />
   <input type='text' name='location' placeholder='location' required />
+  <input type='date' name = 'available_from'/>
+  <input type='date' name = 'available_to'/>
   <input type='submit' value='Create' />
+  
 </form>
