--- a/views/rooms/filtered_date.erb
+++ b/views/rooms/filtered_date.erb
@@ -1,9 +1,9 @@
-kwia
 <% @filtered_rooms.each do |room| %>
   <ul>
     <li><%= room.title %></li>
     <li><%= room.description %></li>
     <li><%= room.price %></li>
     <li><%= room.location %></li>
+    <!--wrap in form, add submit button -->
   </ul>
 <% end %>
