--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,5 +1,5 @@
 <form action='/new_user_submit' method='POST'>
-  <input type='text' name='username' required />
-  <input type='text' name='password' required />
-  <input type='submit' value='Sign in' />
+  <input type='text' name='username' placeholder='username' required />
+  <input type='password' name='password' placeholder='password' required />
+  <input type='submit' value='Create Account and Sign in' />
 </form>
