--- a/views/rooms/your_requests.erb
+++ b/views/rooms/your_requests.erb
@@ -1,7 +1,7 @@
-Hello <%= @username %>
-<br>
-You have requested <%= @room_details['title'] %>
-<br>
+<h1>Hello <%= @username %><h1>
+
+<h2>You have requested <%= @room_details['title'] %></h2>
+
 <%= @room_details['description'] %>
 <br>
 <%= @room_details['price'] %>
