--- a/views/rooms.erb
+++ b/views/rooms.erb
@@ -1,10 +1,13 @@
-Welcome <%= @username %>
-
+<h1>Welcome <%= @username %></h1>
 <form action='/rooms' method='POST' >
-  <input type='date' name='desired_date' />
+  <label for='desired_date'>Select A Booking Date</><br>
+  <input type='date' id='desired_date' name='desired_date' />
   <input type='submit' value='Submit Date' />
 </form>
 
+<br>
+<br>
+<h2>All Listed Rooms</h2>
 <%@rooms.each{|room|%>
   <p> 
   <li><%=room.title%> 
@@ -19,3 +22,9 @@ Welcome <%= @username %>
   <input type='date' name='occupied_date' />
   <input type='submit' value='Submit' />
 </form>
+
+<br>
+<a href='/rooms/new'><h3>List A New Room</h3></a>
+
+<br>
+<a href='/approvals'><h3>Approve Requests For Your Rooms</h3></a>
