--- a/views/signin.erb
+++ b/views/signin.erb
@@ -1,6 +1,10 @@
+<h1>Existing User Sign In</h1>
 <form action='/signin-submit' method='POST'>
-  <input type='text' name='username' required />
-  <input type='text' name='password' required />
+  <input type='text' name='username' placeholder='username' required />
+  <input type='password' name='password' placeholder='password' required />
   <input type='submit' value='Sign in' />
 </form>
 <%= @Reply %>
+<br>
+<br>
+<a href='/' >Click here to create an account</a>
