--- a/views/rooms/new.erb
+++ b/views/rooms/new.erb
@@ -7,11 +7,11 @@
   <input type='text' name='location' placeholder='location' required />
   <br>
   <br>
-  <label for='available_from'>Available From</input>
+  <label for='available_from'>Available From</label>
   <input type='date' id='available_from' name ='available_from' />
   <br>
-  <label for='available_to'>Available To</input>
-  <input style='margin-left: 1.3rem;' type='date' id='available_to' name ='available_to' />
+  <label for='available_to'>Available To</label>
+  <input style='margin-left: 1.2rem;' type='date' id='available_to' name ='available_to' />
   <br>
   <br>
   <input type='submit' value='Create' />
