--- a/views/rooms/new.erb
+++ b/views/rooms/new.erb
@@ -3,7 +3,7 @@
 <form action='/rooms/new' method='POST'>
   <input type='text' name='title'  placeholder='title' required/>
   <input type='text' name='description' placeholder='description' required />
-  <input type='number' name='price' placeholder='price' required />
+  <input type='number' step="0.01" name='price' placeholder='price' required />
   <input type='text' name='location' placeholder='location' required />
   <br>
   <br>
