--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,9 +1,21 @@
-<h1>Create New Account and Sign In</h1>
+<head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+</head>
 
-<form action='/new_user_submit' method='POST'>
-  <input type='text' name='username' placeholder='username' required />
-  <input type='password' name='password' placeholder='password' required />
-  <input type='submit' value='Create Account and Sign in' />
-</form>
+<body style="text-align:center">
 
-<a href='/signin' >If you have an account, click here to sign in</a>
+  <h1 style="font-size:6rem;color:green;margin:0; font-family: 'Rampart One', cursive;">Roomin8</h1>
+
+  <img class="title_img" style="max-width:60%" src="https://images.weserv.nl/?url=https://the-take.com/images/uploads/screenprism/_constrain-1080w/Green-Bathroom.jpg&output=jpg" alt="scary room"/>
+  <h2 style="color:green">Create New Account and Sign In</h2>
+
+  <form action='/new_user_submit' method='POST'>
+    <input type='text' name='username' placeholder='username' required />
+    <input type='password' name='password' placeholder='password' required />
+    <input type='submit' value='Create Account and Sign in' />
+  </form>
+
+  <a href='/signin' >If you have an account, click here to sign in</a>
+</body>
